--- a/partials/post-card.hbs
+++ b/partials/post-card.hbs
@@ -30,12 +30,14 @@
     {{#if feature_image}}
     <div class="has-text-centered">
     <a class="post-card-image-link" href="{{url}}">
-        {{!-- This is a responsive image, it loads different sizes depending on device
-        https://medium.freecodecamp.org/a-guide-to-responsive-images-with-ready-to-use-templates-c400bd65c433 --}}
-        <img class="post-card-image"
-            src="{{feature_image}}"
-            alt="{{title}}"
-        />
+        <figure class="kg-image-card">
+            {{!-- This is a responsive image, it loads different sizes depending on device
+            https://medium.freecodecamp.org/a-guide-to-responsive-images-with-ready-to-use-templates-c400bd65c433 --}}
+            <img class="kg-image post-card-image"
+                src="{{feature_image}}"
+                alt="{{title}}"
+            />
+        </figure>
     </a>
     </div>
    
