--- a/post.hbs
+++ b/post.hbs
@@ -32,6 +32,11 @@
 
         {{!-- 右侧主题栏 --}}
         <div class="column">
+            <a href="/ghost/#/editor/post/{{id}}" class="edit-post is-pulled-right">
+                <span class="icon">
+                    <i class="fas fa-user-edit"></i>
+                </span>
+            </a>
             <div class="{{post_class}}">
                 <article class="post-full {{#unless feature_image}}no-image{{/unless}}">
 
