--- a/author.hbs
+++ b/author.hbs
@@ -40,7 +40,7 @@
 
                     {{!-- 作者的推特 --}}
                     {{#if twitter}}
-                        <a href="{{twitter}}">
+                        <a href="{{twitter_url twitter}}">
                             <span class="icon has-text-info is-large">
                                 <i class="fab fa-twitter fa-lg"></i>
                             </span> 
@@ -49,7 +49,7 @@
 
                     {{!-- 作者的Facebook --}}
                     {{#if facebook}}
-                        <a href="{{facebook}}">
+                        <a href="{{facebook_url facebook}}">
                             <span class="icon has-text-link is-large">
                                 <i class="fab fa-facebook fa-lg"></i>
                             </span>
