更新navigation的字体

--- a/assets/css/themes.css
+++ b/assets/css/themes.css
@@ -26,6 +26,12 @@ hr {
 .site-nav {
 }
 
+.site-nav .navigation {
+    font-size: 14px;
+    font-weight: bold;
+    font-family: 'Courier New', Courier, monospace;
+}
+
 .site-nav .site-title {
     text-align: center;
     background: #222222;
