--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -1,4 +1,4 @@
-<ul class="menu-list">
+<ul class="menu-list navigation">
     {{#foreach navigation}}
         <li class="nav-{{slug}}">
             <a href="{{url absolute="true"}}" class="{{#if current}} is-active{{/if}}">
