修正page的编辑链接

--- a/page.hbs
+++ b/page.hbs
@@ -32,7 +32,7 @@
 
         {{!-- 右侧主题栏 --}}
         <div class="column">
-            <a href="/ghost/#/editor/post/{{id}}" class="edit-post is-pulled-right">
+            <a href="/ghost/#/editor/page/{{id}}" class="edit-post is-pulled-right">
                 <span class="icon">
                     <i class="fas fa-user-edit"></i>
                 </span>
