--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -11,7 +11,7 @@
         <span>cmlanche</span>
     </p>
     <p>
-      由 <a href="https://ghost.org"><strong>Ghost Blog</strong></a> 强力驱动 | 主题 - <a href="https://github.com/cmlanche/ghost-next-theme"><strong>ghost-theme-next</strong></a> v0.1
+      Published by <a href="https://ghost.org"><strong>Ghost</strong></a> | 主题 - <a href="https://github.com/cmlanche/ghost-next-theme"><strong>ghost-theme-next</strong></a> v-0.0.7
     </p>
   </div>
 </footer>
