--- a/assets/css/themes.css
+++ b/assets/css/themes.css
@@ -244,3 +244,70 @@ a.edit-post {
         padding: 0 24px;
     }
 }
+
+/* 系统组件 */
+/* bookmark */
+.post-full-content .kg-bookmark-container {
+    display: flex;
+    flex-wrap: wrap;
+    color: black;
+    text-decoration: none;
+    border: 1px solid #e7eff4;
+    margin-bottom: 2rem;
+}
+
+.post-full-content a.kg-bookmark-container:hover {
+    text-decoration: none;
+}
+
+.post-full-content .kg-bookmark-content {
+    flex-basis: 0;
+    flex-grow: 999;
+    min-width: 50%;
+    padding: 20px;
+}
+
+.post-full-content .kg-bookmark-title {
+    font-weight: 600;
+    font-size: 14px;
+}
+
+.post-full-content .kg-bookmark-description,
+.post-full-content .kg-bookmark-metadata {
+    margin-top: 12px;
+    font-size: 13px;
+}
+
+.post-full-content .kg-bookmark-publisher {
+}
+
+.post-full-content .kg-bookmark-thumbnail {
+    flex-basis: 15rem;
+    flex-grow: 1;
+    position: relative;
+    flex-grow: 1;
+    min-width: 33%;
+}
+
+
+.post-full-content .kg-bookmark-thumbnail img {
+    vertical-align: bottom;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.post-full-content .kg-bookmark-icon {
+    width: 22px;
+    height: 22px;
+    margin-right: 8px;
+    vertical-align: bottom;
+}
+
+.post-full-content .kg-bookmark-author:after {
+    content: "•";
+    margin: 0 6px;
+}
